--- a/docs/style.css
+++ b/docs/style.css
@@ -90,7 +90,7 @@ ul{
 .banner{
 	margin: 12px 0 50px 0;
 	width: 100%;
-	background: url('img/banner.jpg') no-repeat center center/cover;
+	background: url('img/edited/banner_edited.jpg') no-repeat center center/cover;
 	height: 500px;
 	display: flex;
 	flex-direction: column;
@@ -215,4 +215,123 @@ ul{
 	padding: 15px 0;
 	font-size: 12px;
 	text-align: center;
+}
+
+.social-networks{
+	text-align: center;
+	margin: 40px 0 50px 0;
+}
+
+.social-networks p{
+	padding: 10px;
+}
+
+.social-links{
+	font-size: 55px;
+}
+
+/* start of desktop styles */
+
+/*@media screen and (max-width: 991px) {
+/* start of large tablet styles */
+
+
+@media screen and (max-width: 320px) {
+/* start of phone styles */
+
+
+	.logo{
+		width: auto;
+		height: 50px;
+	}
+
+	.nav{
+		padding: 25px 0;
+	}
+
+	.search-input{
+		margin-left: 20px;
+		flex: 1;
+	}
+
+	.search-input li input{
+		width: 80%;
+		border: none;
+		height: 20px;
+		border-radius: 5px;
+	}
+
+	.btn-login{
+		font-size: 10px;
+	}
+
+	.menu-links{
+		position: absolute;
+		display: block;
+		font-weight: 700;
+		flex: 1;
+		left: -300px;
+	}
+	
+
+	/* BANNER */
+
+	.banner{
+		height: 250px;
+		margin: 12px 0 18px 0;
+	}
+
+	.banner-text h2{
+		font-size: 15px;
+	}
+
+	.banner-text p{
+		width: 100%;
+		font-size: 10px;
+	}
+
+	.banner-text a{
+		font-size: 10px;
+	}
+
+	/* NEWS */
+
+	.news{
+		display: grid;
+		grid-template-columns: repeat(1, 1fr);
+		column-gap: 25px;
+		margin-bottom: 5px;
+	}
+
+	.card{
+		margin-bottom: 18px;
+	}
+
+	/* BANNER1 */
+
+	.banner1{
+		margin: 18px 0;
+		background: url('img/banner2.jpg') no-repeat fixed center/cover;
+		height: 250px;
+	}
+
+	.banner1-content h2{
+		font-size: 15px;
+	}
+
+	.banner1-content h2,
+	.banner1-content p,
+	.banner1-content a{
+		margin: 15px 0;
+		padding: 0 20px;
+	}
+
+	.banner1-content a{
+		background: blue;
+		padding: 5px 8px;
+		border-radius: 5px;
+		display: inline-block;
+		margin: 0 15px; 
+	}
+
 }
