--- a/docs/style.css
+++ b/docs/style.css
@@ -241,7 +241,7 @@ ul{
 /* start of large tablet styles */
 
 
-@media only screen and (min-device-width : 1px) and (max-width: 375px) {
+@media only screen and (min-width: 320px) and (max-width: 375px) {
 /* start of phone styles */
 
 
@@ -291,7 +291,7 @@ ul{
 	}
 
 	.banner-text p{
-		width: 100%;
+		width: 60%;
 		font-size: 10px;
 	}
 
@@ -361,4 +361,286 @@ ul{
 	.footer-content ul{
 		margin-bottom: 25px;
 	}
+}
+
+@media only screen and (min-width: 376px) and (max-width: 425px) {
+/* start of phone styles */
+
+
+	.logo{
+		width: auto;
+		height: 50px;
+	}
+
+	.nav{
+		padding: 25px 0;
+	}
+
+	.search-input{
+		margin-left: 20px;
+		flex: 1;
+	}
+
+	.search-input li input{
+		width: 80%;
+		border: none;
+		height: 20px;
+		border-radius: 5px;
+	}
+
+	.btn-login{
+		font-size: 10px;
+	}
+
+	.menu-links{
+		position: absolute;
+		display: block;
+		font-weight: 700;
+		flex: 1;
+		left: -300px;
+	}
+	
+
+	/* BANNER */
+
+	.banner{
+		height: 250px;
+		margin: 12px 0 18px 0;
+	}
+
+	.banner-text h2{
+		font-size: 15px;
+	}
+
+	.banner-text p{
+		width: 60%;
+		font-size: 10px;
+	}
+
+	.banner-text a{
+		font-size: 10px;
+	}
+
+	/* NEWS */
+
+	.news{
+		display: grid;
+		grid-template-columns: repeat(1, 1fr);
+		column-gap: 25px;
+		margin-bottom: 5px;
+	}
+
+	.card{
+		margin-bottom: 18px;
+	}
+
+	.card img{
+		width: 100%;
+		height: 280px;
+	}
+
+	/* BANNER1 */
+
+	.banner1{
+		margin: 18px 0;
+		background: url('img/banner2.jpg');
+		height: 250px;
+	}
+
+	.banner1-content h2{
+		font-size: 15px;
+	}
+
+	.banner1-content h2,
+	.banner1-content p,
+	.banner1-content a{
+		margin: 15px 0;
+		padding: 0 20px;
+	}
+
+	.banner1-content a{
+		background: blue;
+		padding: 5px 8px;
+		border-radius: 5px;
+		display: inline-block;
+		margin: 0 15px; 
+	}
+
+	/* SOCIAL LINKS */
+
+	.social-networks{
+		margin: 20px 0 25px 0;
+	}
+
+	.social-links{
+		font-size: 27px;
+	}
+
+	/* FOOTER */
+
+	.footer-content{
+		padding: 25px 0 0 0;
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		column-gap: 15px;
+	}
+
+	.footer-content ul{
+		margin-bottom: 25px;
+	}
+}
+
+@media only screen and (min-width: 426px) and (max-width: 768px) {
+/* start of phone styles */
+
+
+	.logo{
+		width: auto;
+		height: 50px;
+	}
+
+	.nav{
+		padding: 25px 0;
+	}
+
+	.search-input{
+		margin-left: 20px;
+		flex: 1;
+	}
+
+	.search-input li input{
+		width: 80%;
+		border: none;
+		height: 20px;
+		border-radius: 5px;
+	}
+
+	.btn-login{
+		font-size: 10px;
+	}
+
+	.menu-links{
+		position: absolute;
+		display: block;
+		font-weight: 700;
+		flex: 1;
+		left: -300px;
+	}
+	
+
+	/* BANNER */
+
+	.banner{
+		height: 250px;
+		margin: 12px 0 18px 0;
+	}
+
+	.banner-text h2{
+		font-size: 15px;
+	}
+
+	.banner-text p{
+		width: 60%;
+		font-size: 10px;
+	}
+
+	.banner-text a{
+		font-size: 10px;
+	}
+
+	/* NEWS */
+
+	.news{
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		column-gap: 25px;
+		margin-bottom: 5px;
+	}
+
+	.card{
+		margin-bottom: 18px;
+	}
+
+	/* BANNER1 */
+
+	.banner1{
+		margin: 18px 0;
+		background: url('img/banner2.jpg');
+		height: 250px;
+	}
+
+	.banner1-content h2{
+		font-size: 15px;
+	}
+
+	.banner1-content h2,
+	.banner1-content p,
+	.banner1-content a{
+		margin: 15px 0;
+		padding: 0 20px;
+	}
+
+	.banner1-content a{
+		background: blue;
+		padding: 5px 8px;
+		border-radius: 5px;
+		display: inline-block;
+		margin: 0 15px; 
+	}
+
+	/* SOCIAL LINKS */
+
+	.social-networks{
+		margin: 20px 0 25px 0;
+	}
+
+	.social-links{
+		font-size: 27px;
+	}
+
+	/* FOOTER */
+
+	.footer-content{
+		padding: 25px 0 0 0;
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		column-gap: 15px;
+	}
+
+	.footer-content ul{
+		margin-bottom: 25px;
+	}
+}
+
+@media only screen and (min-width: 769px) and (max-width: 1024px) {
+/* start of phone styles */
+
+
+	.logo{
+		width: auto;
+		height: 50px;
+	}
+
+	.menu-links li{
+		padding: 5px 17px;
+	}
+
+	/* NEWS */
+
+	.news{
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		column-gap: 25px;
+		margin-bottom: 5px;
+	}
+
+	.card{
+		margin-bottom: 18px;
+	}
+
+	.news .card img{
+		width: 100%;
+		height: 280px;
+	}
+
 }
