--- a/docs/style.css
+++ b/docs/style.css
@@ -104,6 +104,14 @@ ul{
 	background: #32CD32;
 }
 
+.btn-menu{
+	z-index: 2;
+	font-size: 1.5em;
+	display: none;
+	padding: 0;
+}
+
+
 /* BANNER */
 
 .banner{
@@ -259,7 +267,7 @@ ul{
 
 	.logo{
 		width: auto;
-		height: 50px;
+		height: 40px;
 	}
 
 	.nav{
@@ -282,6 +290,10 @@ ul{
 		font-size: 10px;
 	}
 
+	.btn-login a{
+		margin-right: 10px;
+	}
+
 	.btn-login a i{
 		margin-left: 0px;
 	}
@@ -289,15 +301,44 @@ ul{
 	.btn-login span{
 		display: none;
 	}
+	
+	.btn-menu{
+		display: block;
+	}
 
 	.menu-links{
 		position: absolute;
 		display: block;
 		font-weight: 700;
 		flex: 1;
-		left: -300px;
+		top: 0;
+		left: 0px;
+		background: #2f3640;
+		height: 100%;
+		font-size: 10px;
+		opacity: .9;
+		transform: translateX(-300px);
+		transition: transform .5s ease-in-out;
 	}
+
+	.menu-links.show{
+    	transform: translateX(0px);
+    } 
 	
+
+	.menu-links li{
+		padding: 10px 30px;
+		border-bottom: 1px solid red;
+	} 
+
+	.menu-links li a:hover{
+		border: 0;
+	} 
+
+	.active{
+		color: red;
+		border: 0;
+	}
 
 	/* BANNER */
 
@@ -425,14 +466,46 @@ ul{
 		display: none;
 	}
 
+	.btn-login a{
+		margin-right: 10px;
+	}
+
+	.btn-menu{
+		display: block;
+	}
+
 	.menu-links{
 		position: absolute;
 		display: block;
 		font-weight: 700;
 		flex: 1;
-		left: -300px;
+		top: 0;
+		left: 0px;
+		background: #2f3640;
+		height: 100%;
+		font-size: 10px;
+		opacity: .9;
+		transform: translateX(-300px);
+		transition: transform .5s ease-in-out;
 	}
-	
+
+	.menu-links.show{
+    	transform: translateX(0px);
+    } 
+
+    .menu-links li{
+		padding: 10px 30px;
+		border-bottom: 1px solid red;
+	} 
+
+	.menu-links li a:hover{
+		border: 0;
+	} 
+
+	.active{
+		color: red;
+		border: 0;
+	}
 
 	/* BANNER */
 
@@ -559,12 +632,45 @@ ul{
 		display: none;
 	}
 
+	.btn-login a{
+		margin-right: 15px;
+	}
+
+	.btn-menu{
+		display: block;
+	}
+
 	.menu-links{
 		position: absolute;
 		display: block;
 		font-weight: 700;
 		flex: 1;
-		left: -300px;
+		top: 0;
+		left: 0px;
+		background: #2f3640;
+		height: 100%;
+		font-size: 10px;
+		opacity: .9;
+		transform: translateX(-300px);
+		transition: transform .5s ease-in-out;
+	}
+
+	.menu-links.show{
+    	transform: translateX(0px);
+    } 
+
+    .menu-links li{
+		padding: 10px 30px;
+		border-bottom: 1px solid red;
+	} 
+
+	.menu-links li a:hover{
+		border: 0;
+	} 
+
+	.active{
+		color: red;
+		border: 0;
 	}
 
 	/* CARDS NEWS */
